force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>