force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Associated_OSA__c.field-meta.xml
<CustomField>
    <fullName>Associated_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated OSA</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>