force-app/main/default/objects/OP4I_Entitlement_View__c/fields/DLI_Price__c.field-meta.xml
<CustomField>
    <fullName>DLI_Price__c</fullName>
    <label>DLI Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>