force-app/main/default/objects/OP4I_Entitlement_View__c/fields/OP4I_DLIP_View__c.field-meta.xml
<CustomField>
    <fullName>OP4I_DLIP_View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OP4I DLIP View</label>
    <referenceTo>OP4I_DLIP_View__c</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>