force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>