force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>