force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Parent_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>OP4I Entitlement Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views</relationshipName>
    <type>Lookup</type>
</CustomField>