force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Software_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Software_License_Term__c</fullName>
    <label>Software License Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>