force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/Ajay_View.listView-meta.xml
<ListView>
    <fullName>Ajay_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Lazard Freres &amp; Co. LLC.</value>
    </filters>
    <label>Ajay View</label>
</ListView>