force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Associated_OSA__c</columns>
    <columns>Migration_Status__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote__c</columns>
    <columns>DLIP_Product__c</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Order__c</columns>
    <columns>DLI_Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Contract_Months__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_OSA__c</field>
        <operation>notContain</operation>
        <value>0</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>