force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/Migrated_Contracts.listView-meta.xml
<ListView>
    <fullName>Migrated_Contracts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Migrated Contracts</label>
</ListView>