force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/Vignesh_1.listView-meta.xml
<ListView>
    <fullName>Vignesh_1</fullName>
    <columns>DLIP_Id__c</columns>
    <columns>Associated_OSA__c</columns>
    <columns>DLI_Product__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>DLIP_Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote__c</columns>
    <columns>Order__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Instance__c</columns>
    <columns>Segment_Index__c</columns>
    <columns>Total_Contract_Months__c</columns>
    <columns>First_Segment_Months__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_OSA__c</field>
        <operation>equals</operation>
        <value>19222</value>
    </filters>
    <label>Vignesh</label>
    <language>en_US</language>
</ListView>