force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/X13645_view.listView-meta.xml
<ListView>
    <fullName>X13645_view</fullName>
    <columns>NAME</columns>
    <columns>Associated_OSA__c</columns>
    <columns>DLI_Product__c</columns>
    <columns>DLIP_Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Include_in_Select_Bundle__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order__c</columns>
    <columns>Quote__c</columns>
    <columns>Total_Contract_Months__c</columns>
    <columns>Error_Log__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>Software_License_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_OSA__c</field>
        <operation>contains</operation>
        <value>19486,34728,33708,34287,34101</value>
    </filters>
    <label>13645</label>
    <language>en_US</language>
</ListView>